--- a/FLORES.html
+++ b/FLORES.html
@@ -9,6 +9,27 @@
     <title>FLORES</title>
 </head>
 
+<style>
+  /* Estilos para centrar el texto en el centro de la página */
+  .center-text {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-size: 2.5rem; /* Ajusta el tamaño según tu diseño */
+    color: #ddaff1; /* Color rosa claro */
+    font-weight: 600; /* Grosor de letra más grueso */
+    text-transform: uppercase;
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.7); /* Sombra clara */
+    z-index: 10; /* Asegura que el texto esté por encima de otros elementos */
+}
+  /* Fuente general */
+* {
+    font-family: 'Poppins', cursive;
+}
+</style>
+
 <body class="container">
     <div class="night"></div>
     <div class="flowers">
@@ -307,6 +328,9 @@
         </div>
       </div>
     </div>
+<div class="center-text">
+      Buona giornata REGINA DEL MIO CUORE!
+  </div>
     <script src="main.js"></script>
 
     <audio id="background-music" autoplay loop>
