--- a/FLORES.html
+++ b/FLORES.html
@@ -10,6 +10,8 @@
 </head>
 
 <style>
+  @import url('https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap');
+
   /* Estilos para centrar el texto en el centro de la página */
   .center-text {
     position: absolute;
@@ -23,10 +25,9 @@
     text-transform: uppercase;
     text-shadow: 0 0 10px rgba(255, 255, 255, 0.7); /* Sombra clara */
     z-index: 10; /* Asegura que el texto esté por encima de otros elementos */
-}
-  /* Fuente general */
-* {
-    font-family: 'Poppins', cursive;
+
+    /* Fuente general */
+    font-family: "Caveat Brush", cursive;
 }
 </style>
 
